--- a/cms/templates/cms/about.html
+++ b/cms/templates/cms/about.html
@@ -3,23 +3,27 @@
 {% block title %}About Us | {{ profile.display_name }}{% endblock %}
 
 {% block content %}
-<section class="py-5">
-    <div class="container">
-        <h1 class="display-5 fw-bold mb-4" style="color: var(--brand-primary);">
-            {{ profile.about_title|default:"Our Story" }}
-        </h1>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="lead">
-                    {{ profile.about_content|linebreaks }}
+<div class="theme-{{ profile.template_choice|default:'executive' }} agency-site">
+    <section class="py-5">
+        <div class="container">
+            <h1 class="display-5 fw-bold mb-4">
+                {{ profile.about_title|default:"Our Story" }}
+            </h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="lead">
+                        {{ profile.about_content|linebreaks }}
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    {% if profile.team_photo %}
+                        <img src="{{ profile.team_photo.url }}" class="team-photo" alt="Our Team">
+                    {% elif profile.get_team_photo %}
+                        <img src="{{ profile.get_team_photo }}" class="team-photo" alt="Our Team">
+                    {% endif %}
                 </div>
             </div>
-            {% if profile.team_photo %}
-            <div class="col-md-6">
-                <img src="{{ profile.team_photo.url }}" class="img-fluid rounded shadow" alt="Our Team">
-            </div>
-            {% endif %}
         </div>
-    </div>
-</section>
+    </section>
+</div>
 {% endblock %}
