--- a/marketing/templates/marketing/preview_main.html
+++ b/marketing/templates/marketing/preview_main.html
@@ -23,7 +23,7 @@
 
                 {% if template_id != 'startup' %}
                 <div class="col-lg-6 d-none d-lg-block">
-                    <img src="{{ hero_image }}?auto=format&fit=crop&w=800&q=80" class="img-fluid shadow-lg rounded">
+                    <img src="{{ hero_image }}" class="img-fluid shadow-lg rounded" alt="Template Preview">
                 </div>
                 {% endif %}
             </div>
