--- a/marketing/templates/marketing/template_select.html
+++ b/marketing/templates/marketing/template_select.html
@@ -17,17 +17,23 @@
         
         <div class="row g-4 justify-content-center">
             {% for template in templates %}
-            <div class="col-md-4">
-                <div class="template-card theme-{{ template.id }} h-100">
-                    <span class="feature-label">{{ template.name }}</span>
-                    <p class="small text-muted mb-4">{{ template.description }}</p>
-                    
-                    <a href="{% url 'public_marketing:template_preview' template.id %}" class="btn btn-primary w-100 mb-2 dynamic-link">Live Preview</a>
-                    
-                    <a href="{% url 'public_marketing:tenant_signup' %}?template={{ template.id }}" class="small text-muted text-center d-block dynamic-link">Skip to Signup</a>
-                </div>
-            </div>
-            {% endfor %}
+<div class="col-md-4">
+    <div class="template-card theme-{{ template.id }} h-100">
+        
+        <img src="/media/hero/default_{{ template.id }}.jpg" 
+             class="img-fluid rounded mb-3" 
+             style="height: 160px; width: 100%; object-fit: cover;" 
+             alt="{{ template.name }}">
+
+        <span class="feature-label">{{ template.name }}</span>
+        <p class="small text-muted mb-4">{{ template.description }}</p>
+        
+        <a href="{% url 'public_marketing:template_preview' template.id %}" class="btn btn-primary w-100 mb-2 dynamic-link">Live Preview</a>
+        
+        <a href="{% url 'public_marketing:tenant_signup' %}?template={{ template.id }}" class="small text-muted text-center d-block dynamic-link">Skip to Signup</a>
+    </div>
+</div>
+{% endfor %}
         </div>
     </div>
 </section>
